<resources>
    <string name="app_name">Game Of Life</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="start">Start</string>
    <string name="stop">Stop</string>

    <string name="choose_board_type">Choose Board Type</string>
    <string name="grid">Grid</string>
    <string name="textview">TextView</string>

    <string name="dummy">12345678901234567890\n#@@@#@@@@#@@#@@@@#@@\n#@@@#@@@@#@@#@@@@#@@\n#@@@#@@@@#@@#@@@@#@@\n#@@@#@@@@#@@#@@@@#@@\n#@@@#@@@@#@@#@@@@#@@</string>

</resources>
